--- a/style.css
+++ b/style.css
@@ -143,6 +143,51 @@ h1 {
     font-weight: 700;
 }
 
+.AD {
+    padding: 100px 150px;
+    flex-flow: row wrap;
+}
+
+.AD .container {
+    display: flex;
+    justify-content: space-between;
+    background-color: #3882F6;
+    padding: 50px 100px;
+    border-radius: 10px;
+    flex: 1;
+}
+
+.left {
+    display: flex;
+    flex-flow: column wrap;
+    color: white;
+}
+
+.left h2 {
+    margin: 0;
+}
+
+.left p {
+    margin: 0;
+}
+
+.right button {
+    background-color: inherit;
+    border: 2px solid #ffffff;
+    border-radius: 10px;
+    font-size: 18px;
+    color: #ffffff;
+    font-weight: 700;
+    padding: 0px 25px;
+}
+
+.footer {
+    background-color: #1F2937;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+}
 
 
 
