--- a/style.css
+++ b/style.css
@@ -145,16 +145,18 @@ h1 {
 
 .AD {
     padding: 100px 150px;
-    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .AD .container {
     display: flex;
-    justify-content: space-between;
+    flex-flow: row wrap;
     background-color: #3882F6;
     padding: 50px 100px;
     border-radius: 10px;
-    flex: 1;
+    justify-content: space-between;
+    width: 1000px;
 }
 
 .left {
