--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+@font-face {
+    src: url("./fonts/Cubano.ttf");
+    font-family: Cubano;
+}
+
 body {
     height: 100vh;
     margin: 0;
     display: flex;
     flex-flow: column;
-    font-family: "Roboto", sans-serif;
+    font-family: "Cubano", "Roboto", sans-serif;
 }
 
 .header, .testimonial, .pictures, .footer, .top_h, .bottom_h,
@@ -17,40 +22,86 @@ body {
     margin: 0;
     padding: 0; 
     display: flex;
-    gap: 16px;
-    font-size: 18px;
-    color: #E5E7EB;
+    gap: 32px;
+    font-size: 30px;
     font-weight: 100;
+    margin-bottom: 100px;
+    padding: 10px;
 }
 
 .header {
-    background-color: #1F2937;
+    background-image: url("images/header.jpg");
     flex-flow: row wrap;
+    background-attachment: fixed;
+    background-position: center;
     justify-content: center;
+    align-items: center;
+}
+
+.header li {
+    position: relative;
+    color: black;
+    margin: 0;
+    padding: 0;
+}
+
+.header a {
+    text-decoration: none;
+    color: inherit;
 }
 
 .top_h {
-    width: 830px;
-    justify-content: space-between;
     margin-bottom: 100px;
-    padding-top: 15px;
+    justify-content: center;
+    align-items: center;
 }
 
-.top_h .logo {
-    font-size: 24px;
-    color: #F9FaF8;
+.two a {
+    font-size: 0;
+    height: 100px;
+}
+
+.two a::after {
+    content: "JOIN THE FIGHT";
+    font-size: 30px;
+    transition-duration: 2s;
+}
+
+.two a:hover::after {
+/*
+to-do: make animation, hover link embrace the bagel grows bigger
+*/
+    font-size: 40px;
+    content: "EMBRACE THE BAGEL";
+    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75),
+    -.025em -.05em 0 rgba(0, 255, 0, 0.75), 
+    0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
+    animation: links 1000ms infinite;
+}
+
+.one span, .two span, .three span {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.two span:first-child {
+    animation: links 450ms infinite;
+}
+
+.two span:last-child {
+    animation: links 600ms infinite;
 }
 
 .left-bot {
     flex-direction: column;
 }
 
-h1 {
+h1, p {
     margin: 0;
 }
 
 .left-bot p {
-    margin: 0;
     color: #E5E7EB;
     font-weight: 100;
     margin-bottom: 10px;
@@ -58,8 +109,14 @@ h1 {
 
 .bottom_h {
     gap: 48px;
-    margin-bottom: 120px;
+    margin-bottom: 250px;
     flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #000000;
+    border-radius: 10px;
+    background-color: rgba(211, 211, 211, .4);
+    padding: 50px 20px;
 }
 
 .bottom_h .left-bot {
@@ -70,21 +127,40 @@ h1 {
 .left-bot h1 {
     font-size: 48px;
     font-weight: 800;
-    color: #F9FAF8;
+    color: black;
 }
 
 .left-bot button {
-    background-color: #3882F6;
+    background-color: #000000;
     border: none;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 18px;
+    font-size: 0px;
+    font-family: inherit;
     color: white;
-    font-weight: 550;
     border-radius: 10px;
     padding: 8px 10px;
-    width: 125px;
+    width: 200px;
+}
+
+button::after {
+    font-size: 18px;
+    content: "Join the fight?";
+    transition-duration: 2s;
+    
+}
+
+button:hover::after {
+    width: 250px;
+    height: auto;
+    font-size: 25px;
+    content: "Bagel?";
+    animation: links 500ms infinite;
+}
+
+.right-bot {
+    opacity: .9;
 }
 
 .pictures {
@@ -191,5 +267,47 @@ h1 {
     padding: 50px;
 }
 
+@keyframes links {
+     0% {
+        text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75),
+        -.025em -.05em 0 rgba(0, 255, 0, 0.75), 
+        -0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
+     }
 
+     14% {
+        text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75),
+        -.025em -.05em 0 rgba(0, 255, 0, 0.75), 
+        -0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
+     }
+
+     15% {
+        text-shadow: -0.05em -.025em 0 rgba(255, 0, 0, 0.75),
+        .025em .05em 0 rgba(0, 255, 0, 0.75), 
+        -0.025em -0.05em 0 rgba(0, 0, 255, 0.75);
+     }
+
+     49% {
+        text-shadow: -0.05em -.025em 0 rgba(255, 0, 0, 0.75),
+        .025em .05em 0 rgba(0, 255, 0, 0.75), 
+        -0.025em -0.05em 0 rgba(0, 0, 255, 0.75);
+     }
+
+     50% {
+        text-shadow: 0.05em .025em 0 rgba(255, 0, 0, 0.75),
+        .025em 0 0 rgba(0, 255, 0, 0.75), 
+        0 -0.05em 0 rgba(0, 0, 255, 0.75);
+     }
+
+     99% {
+        text-shadow: 0.05em .025em 0 rgba(255, 0, 0, 0.75),
+        .025em 0 0 rgba(0, 255, 0, 0.75), 
+        0 -0.05em 0 rgba(0, 0, 255, 0.75);
+     }
+
+     100% {
+        text-shadow: -0.05em 0 0 rgba(255, 0, 0, 0.75),
+        -.05em -.025em 0 rgba(0, 255, 0, 0.75), 
+        -0.025em -0.05em 0 rgba(0, 0, 255, 0.75);
+     }
+}
 
