--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
     font-family: "Cubano", "Roboto", sans-serif;
 }
 
-.header, .j_header, .testimonial, .pictures, .footer, .top_h, .top_hj, .bottom_h, .j_bottom_h,
-.left-bot, .j-left-bot, .right-bot, .quote, .quoter,
+.header, .j_header, .testimonial, .pictures, .j_pictures, .footer, 
+.top_h, .top_hj, .bottom_h, .j_bottom_h, .left-bot, .j-left-bot, .right-bot, .quote, .quoter,
 .AD, .left, .right, .footer {
     display: flex;
 }
@@ -255,31 +255,40 @@ see if can remove excess top space from jobu bottom-header
    width: 300px;
 }
 
-.pictures {
-    text-align: center;
+.pictures, .j_pictures {
     flex-flow: column;
+    text-align: center;
+}
+
+.pictures {
     background-color: rgba(139, 0, 0);
 }
 
-.title {
-    display: flex;
-    flex-flow: row;
-    justify-content: center;
-    align-items: center;
-    font-size: 36px;
-
-    margin: 30px;
+.j_pictures {
+    background-color: #231F20;
 }
 
-/* temporary */
-.container img {
+.title, .j_title {
+    font-size: 36px;
+    padding: 30px;
+}
+
+.container img, .j_container img {
     width: 100%;
     height: 180px;
     object-fit: cover;
-    border: 5px solid #ffffff;
     border-radius: 50%;
     transition-duration: 2s;
 }
+
+.j_container .hole1 {
+    border: 3px solid #000000;
+}
+
+.container img {
+    border: 3px solid #ffffff;
+}
+
 
 .container img:hover {
     width: 100%;
@@ -287,7 +296,45 @@ see if can remove excess top space from jobu bottom-header
     border: 5px solid green;
 }
 
-.pictures .container {
+
+.bagels {
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+.hole1 {
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+.bagels .hole2 {
+    position: absolute;
+    top: 60px;
+    left: 65px;  
+    opacity: 0%;
+    transition-duration: 2s;
+    color: #231F20;
+}
+
+
+.bagels .hole2 {
+    width: 75px;
+    height: 75px;
+    border: 1.5px solid #231F20;
+}
+
+.hole2:hover {
+    width: 90px;
+    height: 90px;
+    opacity: 100%;
+    top: 50px;
+    left: 57px;
+    border: 3px solid #000000;
+}
+
+.container, .j_container {
     display: flex;
     flex-wrap: wrap;
     gap: 32px;
@@ -302,6 +349,10 @@ see if can remove excess top space from jobu bottom-header
 
 .text, .title {
     color: #CBC3E3;
+}
+
+.j-text {
+    color: #000000;
 }
 
 /*
